# Micro_Simulation

./: .gitignore  CMakeLists.txt  README  README.md
data/: log.txt  log1.txt  log2.txt  log4.txt  log5.txt  log6.txt  question2.txt  version_1.txt  version_2.txt
src/code/: Main.cpp  Particule.cpp  Simulation.cpp
src/headers/: Particule.h  Simulation.h
